# projeto-eva

./: .cleanup-plan.md  .env.example  .gitignore  .mcp.json  AUDIT_DATABASE_SCHEMA.md  CHANGELOG_WHATSAPP_UI.md  CLEANUP-REPORT-2025-12-07.md  CODE_OF_CONDUCT.md  COLINHA-APRESENTACAO.md  CONTEXTO_SESSAO_2025-11-20.md  CONTRIBUTING.md  CORRECOES_KANBAN_2025-11-21.md  DEPLOY-PRONTO.md  DEPLOY-VERCEL.md  DEPLOY-VPS-BACKEND-ONLY.md  DEPLOY-VPS.md  DOCS-API-REFERENCE.md  DOCS-ARQUITETURA.md  DOCS-DEPLOY.md  DOCS-DESENVOLVIMENTO.md  DOCS-MULTI-TENANT.md  DOCUMENTACAO-DEFINITIVA.md  FRONTEND-GUIA-RAPIDO.md  GETTING-STARTED.md  GUIA-DEPLOY.md  GUIA-RAPIDO-DEPLOY.md  HOTEIS RESERVA.xlsx  IMPLEMENTACAO-MENSAGENS-INTERATIVAS.md  INSTRUCOES-TOKEN-WHATSAPP.md  LEIA-ME-PRIMEIRO.md  META-PRIVACY-POLICY-CHECKLIST.md  MODELO-PROJETO-SUCESSO.md  PRIVACY-POLICY-STRUCTURE.md  PROXIMO-PASSO.md  README.md  RELATORIO-CORRECOES-API.md  RELATORIO-FUNCIONALIDADES.md  RELATORIO-PROBLEMA-MENSAGENS.md  RELATORIO-TECNICO.md  RELATORIO_IMPLEMENTACAO_ENDPOINT_POST_CONVERSATIONS.md  (+53 more)
services/crm-core/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.dev.yml  pyproject.toml  pytest.ini  requirements.txt
services/crm-core/alembic/: env.py
services/crm-core/app/: main.py
services/crm-core/docs/: CROSS_BORDER_DATA_TRANSFER.md  SECURITY_COMPLIANCE_AUDIT_2026-03-07.md
services/crm-core/scripts/: encrypt_existing_tokens.py  validate-migrations.sh
services/crm-core/tests/: test_circuit_breaker.py  test_encryption.py  test_health.py  test_log_sanitizer.py  test_request_id.py  (+1 more)
(+829 files in other folders)
