[project]
name = "crm-core"
version = "0.1.0"
description = "CRM Core Microservice - Frappe CRM Clone"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
